--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:36:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:37:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ body {
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 13</td>
       <td class="greyout">Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -199,9 +199,9 @@ E thru 14</td>
       <td>Tyrrell Hatton E
 E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland(W) +1
-+1 thru 13</td>
-      <td class="greyout">Sam Burns +1
-+1 thru 15</td>
++1 thru 14</td>
+      <td class="greyout">Sam Burns +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -265,7 +265,7 @@ E thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 14</td>
       <td class="greyout">Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -342,10 +342,10 @@ E thru 14</td>
 -1 (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
+      <td class="greyout">Sam Burns +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -372,10 +372,10 @@ E thru 14</td>
 -3 (F)</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +1
+      <td>Brooks Koepka +1
 +1 thru 13</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 16</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -389,7 +389,7 @@ E thru 14</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout">Shane Lowry +1
@@ -484,12 +484,12 @@ E (F)</td>
 -3 (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +1
+      <td>Brooks Koepka +1
 +1 thru 13</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
+      <td class="greyout">Sam Burns +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -505,7 +505,7 @@ E thru 15</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 13</td>
       <td class="greyout">Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -549,7 +549,7 @@ E (F)</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +1
@@ -581,7 +581,7 @@ E (F)</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
@@ -596,12 +596,12 @@ E thru 14</td>
 -2 (F)</td>
       <td>Patrick Cantlay(W) E
 E thru 14</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 13</td>
-      <td class="greyout">Jon Rahm +1
+      <td>Viktor Hovland +1
 +1 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 14</td>
+      <td class="greyout">Sam Burns +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -611,7 +611,7 @@ E thru 14</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Xander Schauffele +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -631,7 +631,7 @@ E thru 14</td>
       <td>Collin Morikawa E
 E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -663,7 +663,7 @@ E thru 17</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 14</td>
     </tr>
@@ -677,26 +677,10 @@ E thru 17</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td>Xander Schauffele +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Justin Rose +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -740,10 +724,10 @@ E thru 14</td>
 -2 (F)</td>
       <td>Shane Lowry(W) +1
 +1 (F)</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 13</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 16</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
     </tr>
@@ -764,6 +748,22 @@ E thru 15</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 13</td>
+      <td>Xander Schauffele +1
++1 thru 13</td>
+      <td>Sam Burns +2
++2 thru 16</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Justin Rose +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -3
@@ -773,7 +773,7 @@ E thru 15</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout">Xander Schauffele +1
@@ -787,7 +787,7 @@ E thru 15</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -803,7 +803,7 @@ E thru 14</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -821,7 +821,7 @@ E thru 14</td>
       <td>Collin Morikawa E
 E thru 15</td>
       <td>Viktor Hovland(W) +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 14</td>
       <td class="greyout">Xander Schauffele +1
@@ -853,7 +853,7 @@ E thru 14</td>
       <td>Collin Morikawa(W) E
 E thru 15</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td class="greyout leftborder">Gary Woodland +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
@@ -882,14 +882,14 @@ E thru 15</td>
 -3 (F)</td>
       <td>Patrick Cantlay E
 E thru 14</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 +1 thru 14</td>
-      <td class="greyout">Jordan Spieth(W) +2
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 +2 thru 14</td>
+      <td class="greyout">Sam Burns +2
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -899,7 +899,7 @@ E thru 14</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -947,27 +947,11 @@ Out With Injury</td>
       <td>Patrick Cantlay E
 E thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Jon Rahm +1
 +1 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">1</td>
-      <td>Will Zalatoris -2
--2 thru 14</td>
-      <td>Sam Burns +1
-+1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 13</td>
-      <td>Jon Rahm +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -979,7 +963,7 @@ E thru 14</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -1001,6 +985,22 @@ E thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 13</td>
       <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Will Zalatoris -2
+-2 thru 14</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td>Jon Rahm +1
++1 thru 14</td>
+      <td>Sam Burns +2
++2 thru 16</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 14</td>
+      <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -1041,7 +1041,7 @@ E (F)</td>
       <td>Collin Morikawa E
 E thru 15</td>
       <td>Viktor Hovland(W) +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td>Jon Rahm +1
@@ -1057,7 +1057,7 @@ E thru 15</td>
       <td>Jon Rahm(W) +1
 +1 thru 14</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td>Xander Schauffele +1
@@ -1071,7 +1071,7 @@ E thru 15</td>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">4</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 13</td>
       <td>Jon Rahm +1
@@ -1087,7 +1087,7 @@ E thru 15</td>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">5</td>
       <td>Viktor Hovland +1
-+1 thru 13</td>
++1 thru 14</td>
       <td>Jon Rahm +1
 +1 thru 14</td>
       <td>Xander Schauffele +1
