--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:44:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:45:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,6 +156,22 @@ body {
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 15</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Tony Finau -1
+-1 (F)</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -172,20 +188,20 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">John Nixon</td>
       <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 15</td>
-      <td>Tony Finau -1
--1 (F)</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Rory McIlroy -1
+-1 thru 13</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Collin Morikawa E
+E thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 13</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -204,20 +220,20 @@ E thru 14</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Sungjae Im -5
+-5 thru 17</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
       <td>Collin Morikawa E
 E thru 15</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
+      <td>Viktor Hovland(W) +1
++1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka +1
 +1 thru 13</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 14</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -233,22 +249,6 @@ E thru 14</td>
       <td class="greyout leftborder">Justin Thomas +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -5
--5 thru 17</td>
-      <td>Collin Morikawa E
-E thru 15</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 13</td>
-      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -300,6 +300,38 @@ E thru 15</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -4
+-4 thru 15</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td>Brooks Koepka +1
++1 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 15</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Tyrrell Hatton E
+E thru 16</td>
+      <td>Jon Rahm +1
++1 thru 15</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners(W) -2
@@ -316,46 +348,14 @@ E thru 15</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -4
--4 thru 15</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td>Viktor Hovland +1
-+1 thru 14</td>
-      <td>Brooks Koepka +1
-+1 thru 13</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
-      <td>Tyrrell Hatton E
-E thru 16</td>
-      <td>Jon Rahm +1
-+1 thru 15</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Collin Morikawa E
 E thru 15</td>
-      <td>Patrick Cantlay E
-E thru 14</td>
       <td>Jon Rahm(W) +1
 +1 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +1
