--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:46:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:47:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -364,22 +364,6 @@ E (F)</td>
 +1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Patrick Cantlay -1
--1 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-+1 (F)</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -444,6 +428,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
++1 (F)</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -476,38 +476,6 @@ E (F)</td>
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy(W) -1
--1 thru 13</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +1
-+1 thru 14</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson -4
--4 thru 15</td>
-      <td>Rory McIlroy(W) -1
--1 thru 13</td>
-      <td>Patrick Cantlay -1
--1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -538,22 +506,6 @@ E (F)</td>
 +1 thru 15</td>
       <td class="greyout">Sam Burns +2
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-5</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Will Zalatoris -2
--2 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Collin Morikawa E
-E thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +1
-+1 thru 14</td>
-      <td class="greyout">Viktor Hovland +1
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -604,20 +556,52 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Patrick Cantlay -1
--1 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Viktor Hovland +1
-+1 thru 14</td>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Rory McIlroy(W) E
+E thru 14</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson -4
+-4 thru 15</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Rory McIlroy(W) E
+E thru 14</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 15</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Will Zalatoris -2
+-2 thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Collin Morikawa E
+E thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +1
++1 thru 14</td>
+      <td class="greyout">Viktor Hovland +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -636,14 +620,30 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Viktor Hovland +1
++1 thru 14</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 14</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Will Zalatoris -2
 -2 thru 15</td>
       <td>Tiger Woods(W) -1
 -1 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Rory McIlroy E
+E thru 14</td>
       <td>Collin Morikawa E
 E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +1
@@ -653,35 +653,19 @@ E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Corey Conners -2
 -2 (F)</td>
       <td>Will Zalatoris -2
 -2 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Rory McIlroy E
+E thru 14</td>
       <td>Brooks Koepka +1
 +1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 15</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Jon Rahm(W) +1
-+1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Bubba Watson +1
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -812,36 +796,20 @@ E thru 15</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -4
 -4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Xander Schauffele +1
-+1 thru 14</td>
-      <td>Sam Burns +2
-+2 thru 16</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Justin Rose +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Rory McIlroy E
+E thru 14</td>
       <td>Jon Rahm(W) +1
 +1 thru 15</td>
       <td>Viktor Hovland +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 14</td>
+      <td class="greyout leftborder">Bubba Watson +1
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -860,36 +828,36 @@ E thru 15</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Benjac</td>
       <td class="bigbold">-1</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Collin Morikawa(W) E
-E thru 15</td>
-      <td>Viktor Hovland +1
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Xander Schauffele +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Gary Woodland +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas +4
+      <td>Sam Burns +2
++2 thru 16</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Justin Rose +4
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners -2
--2 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Rory McIlroy E
+E thru 14</td>
       <td>Jon Rahm(W) +1
 +1 thru 15</td>
-      <td>Xander Schauffele +1
+      <td>Viktor Hovland +1
 +1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 14</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -956,18 +924,34 @@ Out With Injury</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">0</td>
-      <td>Patrick Cantlay(W) -1
--1 thru 15</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Brooks Koepka +1
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Collin Morikawa(W) E
+E thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Viktor Hovland +1
 +1 thru 14</td>
-      <td>Jon Rahm +1
+      <td class="greyout leftborder">Gary Woodland +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -2
+-2 (F)</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Jon Rahm(W) +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td>Xander Schauffele +1
 +1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1016,6 +1000,22 @@ E (F)</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +2
 +2 thru 14</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay(W) -1
+-1 thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td>Brooks Koepka +1
++1 thru 14</td>
+      <td>Jon Rahm +1
++1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
