--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:46:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 6:47:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,35 +173,19 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Joaquin Niemann -3
 -3 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
+      <td>Rory McIlroy E
+E thru 14</td>
       <td>Viktor Hovland +1
 +1 thru 14</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Rory McIlroy -1
--1 thru 13</td>
-      <td>Patrick Cantlay -1
--1 thru 15</td>
-      <td>Collin Morikawa E
-E thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +1
-+1 thru 14</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -234,6 +218,22 @@ E thru 15</td>
 +1 thru 14</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Patrick Cantlay -1
+-1 thru 15</td>
+      <td>Collin Morikawa E
+E thru 15</td>
+      <td>Rory McIlroy E
+E thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +1
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
